DeveloperOrg/force-app/main/default/objects/company__c/company__c.object-meta.xml
<CustomObject>
    <description>lookup</description>
    <label>company</label>
    <nameField>
        <label>company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>companys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>