DeveloperOrg/force-app/main/default/objects/company__c/fields/Compant_info__c.field-meta.xml
<CustomField>
    <fullName>Compant_info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compant info</label>
    <type>Checkbox</type>
</CustomField>