DeveloperOrg/force-app/main/default/objects/company__c/fields/count_of_record__c.field-meta.xml
<CustomField>
    <fullName>count_of_record__c</fullName>
    <description>roll-up summary</description>
    <label>count of record</label>
    <summarizedField>customer__c.amount__c</summarizedField>
    <summaryForeignKey>customer__c.company__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>