DeveloperOrg/force-app/main/default/objects/company__c/fields/employee_add__c.field-meta.xml
<CustomField>
    <fullName>employee_add__c</fullName>
    <label>employee add</label>
    <type>TextArea</type>
</CustomField>