DeveloperOrg/force-app/main/default/objects/company__c/fields/Employee_code__c.field-meta.xml
<CustomField>
    <fullName>Employee_code__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Employee code</label>
    <type>AutoNumber</type>
</CustomField>