DeveloperOrg/force-app/main/default/objects/company__c/fields/Employee_id__c.field-meta.xml
<CustomField>
    <fullName>Employee_id__c</fullName>
    <label>Employee id</label>
    <type>Email</type>
</CustomField>