DeveloperOrg/force-app/main/default/objects/company__c/fields/employee_phone__c.field-meta.xml
<CustomField>
    <fullName>employee_phone__c</fullName>
    <label>employee phone</label>
    <type>Phone</type>
</CustomField>