DeveloperOrg/force-app/main/default/objects/company__c/fields/trainee_acc__c.field-meta.xml
<CustomField>
    <fullName>trainee_acc__c</fullName>
    <label>trainee acc</label>
    <type>TextArea</type>
</CustomField>