DeveloperOrg/force-app/main/default/objects/company__c/fields/trainee_code__c.field-meta.xml
<CustomField>
    <fullName>trainee_code__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>trainee code</label>
    <type>AutoNumber</type>
</CustomField>