DeveloperOrg/force-app/main/default/objects/company__c/fields/trainee_id__c.field-meta.xml
<CustomField>
    <fullName>trainee_id__c</fullName>
    <label>trainee id</label>
    <type>Email</type>
</CustomField>