DeveloperOrg/force-app/main/default/objects/company__c/fields/trainee_name__c.field-meta.xml
<CustomField>
    <fullName>trainee_name__c</fullName>
    <label>trainee name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>