DeveloperOrg/force-app/main/default/objects/company__c/fields/trainee_phone__c.field-meta.xml
<CustomField>
    <fullName>trainee_phone__c</fullName>
    <label>trainee phone</label>
    <type>Phone</type>
</CustomField>