DeveloperOrg/force-app/main/default/objects/company__c/fields/trainee_salary__c.field-meta.xml
<CustomField>
    <fullName>trainee_salary__c</fullName>
    <label>trainee salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>